Changed the logic: now optimization also adds a bug and debt

--- a/templates/play_sprint.html
+++ b/templates/play_sprint.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="sprint-box">
-    <h1>Round {{ round_num }} / {{ rounds }}</h1>
+    <!-- <h1>Round {{ round_num }} / {{ rounds }}</h1> -->
     <h1> Sprint {{ sprint_in_round }} / {{sprints_per_round}}</h1>
     <h2>Team: {{ team.name }}</h2>
     <p>Capacity: {{ team.capacity }}</p>
@@ -43,7 +43,8 @@
     <div class="status-box">
         
         <h1>Team Status</h1>
-        <h2>This round</h2>
+        <!-- <h2>This round</h2> -->
+        <h2>Current expectations</h2>
         <p>Features: {{ team.features_round }}</p>
         <p>Optimizations: {{ team.optimizations_round }}</p>
 
