--- a/templates/start_game.html
+++ b/templates/start_game.html
@@ -9,7 +9,7 @@
         <form method="post" action="#">
 
             <input type="text" name="team_name" placeholder="Enter Team Name" required>
-            <input type="number" name="total_rounds" min="0" placeholder="Enter Number of Rounds" required>
+           <!--  <input type="number" name="total_rounds" min="0" placeholder="Enter Number of Rounds" required> -->
             <button type="submit">Start Game</button>
 
         </form>
