created Developer class and adapted logic for it

--- a/templates/play_sprint.html
+++ b/templates/play_sprint.html
@@ -11,7 +11,7 @@
     <h1> Sprint {{ sprint_in_round }} / {{sprints_per_round}}</h1>
     <h2>Team: {{ team.name }}</h2>
     <p>Capacity: {{ team.capacity }}</p>
-    <p>Developers: {{ team.developers }}</p>
+    <p>Developers: {{ team.n_developers }}</p>
     <p>Resources: {{ team.resources }}</p>
     <h2>Customer Expectation:</h2>
     <p>Features: {{ game.expectation['feature'] }}, Optimizations: {{ game.expectation['optimization'] }}</p>
